moved images folder to public and changed relative url paths in data.json file to absolute

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta 
       name="description"
-      content="Space tourism website made with React"
+      content="Space tourism website built with React"
     />
     <title>Space Tourism</title>
   </head>
